# navigator

ai-pipeline/harvester/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai-pipeline/harvester/api/: harvest_api.py
ai-pipeline/harvester/config/: __init__.py  llm_config.py  logging.py  seeders.py  settings.py
ai-pipeline/harvester/core_client/: api.py
ai-pipeline/harvester/data/: silverage_practice_detail.html  silverage_practices_p1.html
ai-pipeline/harvester/docs/: README.md  aggregators_guide.md  dadata_client_spec.md  event-harvest-policy.md  event_ingestion_pipeline.md  harvest-flows-a-b-c.md
ai-pipeline/harvester/enrichment/: dadata_client.py  url_validator.py
ai-pipeline/harvester/event_ingestion/: __init__.py  adapters.py  core_payload.py  models.py  pipeline.py
ai-pipeline/harvester/harvest/: __init__.py  event_harvest_policy.py  run_organization_harvest.py
ai-pipeline/harvester/metrics/: collector.py
ai-pipeline/harvester/processors/: __init__.py  deepseek_client.py  event_processor.py  organization_processor.py
ai-pipeline/harvester/prompts/: README.md  __init__.py  base_system_prompt.py  dictionaries.py  event_prompt.py  examples.py  organization_prompt.py  prompt_registry.py  schemas.py
ai-pipeline/harvester/schemas/: __init__.py  extraction.py  navigator_core.py
ai-pipeline/harvester/scripts/: __init__.py  aggregator_run_writer.py  auto_enrich.py  batch_test.py  batch_urls.json  enrich_sources.py  import_silverage_events.py  patch_sources.py  reject_redry.py  run_auto_enrich.sh  (+8 more)
(+493 files in other folders)
